--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,5 +1,6 @@
 scrape_configs:
   - job_name: 'pushgateway'
+    honor_labels: true
     scrape_interval: 1s
     static_configs:
       - targets: ['pushgateway:9091']
